@@ -29,6 +29,7 @@ Release 0.20.3 - Unreleased
    HBASE-2065  Cannot disable a table if any of its region is opening 
                at the same time
    HBASE-2026  NPE in StoreScanner on compaction
+   HBASE-2075  Master requires HDFS superuser privileges due to waitOnSafeMode
 
   IMPROVEMENTS
    HBASE-1961  HBase EC2 scripts
